kubernetes/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go_webapp_service
spec:
  selector:
    app: go_webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
