kubernetes/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go_webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go_webapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go_webapp
            port:
              number: 80
